'node-first-commit'

--- a/page.html
+++ b/page.html
@@ -291,7 +291,7 @@
 
           <div class="wallet-item">
             <div class="wallet-item__img">
-              <img src="https://www.buybitcoinworldwide.com/pages/pmethods/en/img/coinbase-logo-chapter.jpg" alt="" class="wallet-item-img" />
+              <img src="./image/coinbase.png" alt="" class="wallet-item-img" />
             </div>
             <h5 class="head-4">Coinbase Wallet</h5>
           </div>
@@ -438,7 +438,7 @@
           <div class="wallet-item">
             <div class="wallet-item__img">
               <img
-                src="https://th.bing.com/th/id/OIP.jxmsg1yHWxkF-Q58a5LThgAAAA?w=172&h=180&c=7&r=0&o=5&pid=1.7"
+                src="./image/ledger-live.png"
                 alt=""
                 class="wallet-item-img"
               />
@@ -699,14 +699,6 @@
           <!--  -->
           <!--  -->
 
-          <div class="wallet-item">
-            <div class="wallet-item__img">
-              <img src="https://th.bing.com/th/id/OIP.jxmsg1yHWxkF-Q58a5LThgAAAA?w=172&h=180&c=7&r=0&o=5&pid=1.7" alt="" class="wallet-item-img" />
-            </div>
-            <h5 class="head-4">Ledger Live</h5>
-          </div>
-          <!--  -->
-          <!--  -->
 
           <div class="wallet-item">
             <div class="wallet-item__img">
@@ -794,7 +786,7 @@
 
           <div class="wallet-item">
             <div class="wallet-item__img">
-              <img src="https://th.bing.com/th/id/OIP.lsC7E4bUZTToJVjmGdraSAAAAA?w=142&h=150&c=7&r=0&o=5&pid=1.7" alt="" class="wallet-item-img" />
+              <img src="./image/local-crypto.jfif" alt="" class="wallet-item-img" />
             </div>
             <h5 class="head-4">LocalCryptos</h5>
           </div>
@@ -803,7 +795,7 @@
 
           <div class="wallet-item">
             <div class="wallet-item__img">
-              <img src="https://elitefaucet-rectify.pages.dev/chunks/img/wallet/unstop.jpg" alt="" class="wallet-item-img" />
+              <img src="./image/unstoppable.png" alt="" class="wallet-item-img" />
             </div>
             <h5 class="head-4">Unstoppable Domains</h5>
           </div>
@@ -921,7 +913,7 @@
 
           <div class="wallet-item">
             <div class="wallet-item__img">
-              <img src="https://th.bing.com/th/id/OIP.WxnFpgwFSJPqIFI0mRgaCQAAAA?w=171&h=180&c=7&r=0&o=5&pid=1.7" alt="" class="wallet-item-img" />
+              <img src="./image/talken.jfif" alt="" class="wallet-item-img" />
             </div>
             <h5 class="head-4">Talken Wallet</h5>
           </div>
@@ -1145,7 +1137,7 @@
 
           <div class="wallet-item">
             <div class="wallet-item__img">
-              <img src="https://elitefaucet-rectify.pages.dev/chunks/img/wallet/walleth.jpg" alt="" class="wallet-item-img" />
+              <img src="./image/walleth.png" alt="" class="wallet-item-img" />
             </div>
             <h5 class="head-4">Walleth</h5>
           </div>
@@ -1204,7 +1196,7 @@
 
           <div class="wallet-item">
             <div class="wallet-item__img">
-              <img src="https://elitefaucet-rectify.pages.dev/chunks/img/wallet/nash.jpg" alt="" class="wallet-item-img" />
+              <img src="./image/nash.jfif" alt="" class="wallet-item-img" />
             </div>
             <h5 class="head-4">Nash</h5>
           </div>
@@ -1222,7 +1214,7 @@
 
           <div class="wallet-item">
             <div class="wallet-item__img">
-              <img src="https://elitefaucet-rectify.pages.dev/chunks/img/wallet/gridplus.jpg" alt="" class="wallet-item-img" />
+              <img src="./image/gridplus.png" alt="" class="wallet-item-img" />
             </div>
             <h5 class="head-4">GridPlus</h5>
           </div>
@@ -1231,7 +1223,7 @@
 
           <div class="wallet-item">
             <div class="wallet-item__img">
-              <img src="https://elitefaucet-rectify.pages.dev/chunks/img/wallet/coolw.jpg" alt="" class="wallet-item-img" />
+              <img src="./image/coolwallet.png" alt="" class="wallet-item-img" />
             </div>
             <h5 class="head-4">CoolWallet S</h5>
           </div>
@@ -1267,7 +1259,7 @@
 
           <div class="wallet-item">
             <div class="wallet-item__img">
-              <img src="https://elitefaucet-rectify.pages.dev/chunks/img/wallet/safepal.jpg" alt="" class="wallet-item-img" />
+              <img src="./image/safepal.png" alt="" class="wallet-item-img" />
             </div>
             <h5 class="head-4">SafePal</h5>
           </div>
@@ -1294,7 +1286,7 @@
 
           <div class="wallet-item">
             <div class="wallet-item__img">
-              <img src="https://th.bing.com/th/id/OIP.x4I_Ky1s8WgLJI7vC6i2_wAAAA?w=208&h=180&c=7&r=0&o=5&pid=1.7" alt="" class="wallet-item-img" />
+              <img src="./image/mathwallet.png" alt="" class="wallet-item-img" />
             </div>
             <h5 class="head-4">MathWallet</h5>
           </div>
@@ -1348,7 +1340,7 @@
 
           <div class="wallet-item">
             <div class="wallet-item__img">
-              <img src="https://elitefaucet-rectify.pages.dev/chunks/img/wallet/epocket.jpg" alt="" class="wallet-item-img" />
+              <img src="./image/easypocket.png" alt="" class="wallet-item-img" />
             </div>
             <h5 class="head-4">EasyPocket</h5>
           </div>
@@ -1357,7 +1349,7 @@
 
           <div class="wallet-item">
             <div class="wallet-item__img">
-              <img src="https://elitefaucet-rectify.pages.dev/chunks/img/wallet/onto.jpg" alt="" class="wallet-item-img" />
+              <img src="./image/onto.png" alt="" class="wallet-item-img" />
             </div>
             <h5 class="head-4">ONTO</h5>
           </div>
@@ -1393,7 +1385,7 @@
 
           <div class="wallet-item">
             <div class="wallet-item__img">
-              <img src="https://elitefaucet-rectify.pages.dev/chunks/img/wallet/coin98.jpg" alt="" class="wallet-item-img" />
+              <img src="./image/coin98.png" alt="" class="wallet-item-img" />
             </div>
             <h5 class="head-4">Coin98</h5>
           </div>
@@ -1411,7 +1403,7 @@
 
           <div class="wallet-item">
             <div class="wallet-item__img">
-              <img src="https://elitefaucet-rectify.pages.dev/chunks/img/wallet/vision.jpg" alt="" class="wallet-item-img" />
+              <img src="./image/vision.jfif" alt="" class="wallet-item-img" />
             </div>
             <h5 class="head-4">Vision</h5>
           </div>
@@ -1420,7 +1412,7 @@
 
           <div class="wallet-item">
             <div class="wallet-item__img">
-              <img src="https://th.bing.com/th/id/OIP.6VZYoF3A7y1s8dBS-ahHPwHaHa?w=154&h=180&c=7&r=0&o=5&pid=1.7" alt="" class="wallet-item-img" />
+              <img src="./image/swft.png" alt="" class="wallet-item-img" />
             </div>
             <h5 class="head-4">SWFT Wallet</h5>
           </div>
@@ -1468,7 +1460,7 @@
 
           <div class="wallet-item">
             <div class="wallet-item__img">
-              <img src="https://elitefaucet-rectify.pages.dev/chunks/img/wallet/dok.jpg" alt="" class="wallet-item-img" />
+              <img src="./image/dok.jfif" alt="" class="wallet-item-img" />
             </div>
             <h5 class="head-4">Dok Wallet</h5>
           </div>
@@ -1495,7 +1487,7 @@
 
           <div class="wallet-item">
             <div class="wallet-item__img">
-              <img src="https://th.bing.com/th/id/OIP.eP7BtxHYFUI_q4AUeGI6ngAAAA?w=175&h=180&c=7&r=0&o=5&pid=1.7" alt="" class="wallet-item-img" />
+              <img src="./image/midas.jfif" alt="" class="wallet-item-img" />
             </div>
             <h5 class="head-4">Midas Wallet</h5>
           </div>
