--- a/index.html
+++ b/index.html
@@ -11,6 +11,14 @@
 
 </head>
 
+<style>
+    header {
+        position: sticky;
+        top: 0;
+        z-index: 100;
+        background-color: black;
+    }
+</style>
 <body>
     <header>
 
